fix bad request error implementation
