# src/model/shared/enum/error-types.js
@@ -1,9 +1,8 @@
 export const 
-VALIDATION_ERROR = 'VALIDATION_ERROR', 
+BAD_REQUEST_ERROR = 'BAD_REQUEST_ERROR', 
 AUTHENTICATION_ERROR = 'AUTHENTICATION_ERROR', 
 FORBIDDEN_ERROR = 'FORBIDDEN_ERROR', 
 NOT_FOUND_ERROR = 'NOT_FOUND_ERROR', 
 UNIQUE_CONSTRAINT_ERROR = 'UNIQUE_CONSTRAINT_ERROR', 
 FOREIGN_KEY_CONSTRAINT_ERROR = 'FOREIGN_KEY_CONSTRAINT_ERROR', 
-PRECONDITION_FAILED_ERROR = 'PRECONDITION_FAILED_ERROR', 
 INTERNAL_SERVER_ERROR = 'INTERNAL_SERVER_ERROR';
