# src/model/shared/error-status-map.js
@@ -1,23 +1,21 @@
 import {
-  VALIDATION_ERROR, 
-  AUTHENTICATION_ERROR, 
-  FORBIDDEN_ERROR, 
-  NOT_FOUND_ERROR, 
-  UNIQUE_CONSTRAINT_ERROR, 
-  FOREIGN_KEY_CONSTRAINT_ERROR, 
-  PRECONDITION_FAILED_ERROR, 
-  INTERNAL_SERVER_ERROR
+  AUTHENTICATION_ERROR,
+  BAD_REQUEST_ERROR,
+  FORBIDDEN_ERROR,
+  FOREIGN_KEY_CONSTRAINT_ERROR,
+  INTERNAL_SERVER_ERROR,
+  NOT_FOUND_ERROR,
+  UNIQUE_CONSTRAINT_ERROR
 } from '../shared/enum/error-types.js';
 
 export const errorStatusMap = new Map(
   [
-    [ VALIDATION_ERROR, 400 ], 
+    [ BAD_REQUEST_ERROR, 400 ], 
     [ AUTHENTICATION_ERROR, 401 ], 
     [ FORBIDDEN_ERROR, 403 ], 
     [ NOT_FOUND_ERROR, 404 ], 
     [ UNIQUE_CONSTRAINT_ERROR, 409 ], 
     [ FOREIGN_KEY_CONSTRAINT_ERROR, 409 ], 
-    [ PRECONDITION_FAILED_ERROR, 412 ], 
     [ INTERNAL_SERVER_ERROR, 500 ]
   ]
 );
